--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Empathic Voice Interface</title>
+    <title>Aitek Live</title>
   </head>
   <body>
     <div id="app">
@@ -12,10 +12,10 @@
         <button id="stop-btn" disabled="true">Stop</button>
       </div>
       <div id="heading-container">
-        <h2>Empathic Voice Interface (EVI)</h2>
+        <h2></h2>
         <p>
-          Welcome to our TypeScript sample implementation of the Empathic Voice Interface!
-          Click the "Start" button and begin talking to interact with EVI.
+          
+          
         </p>
       </div>
       <div id="chat"></div>
